# cookiecutter-data-journalism

./: README.md  cookiecutter.json
hooks/: post_gen_project.py  post_gen_project.py.save
{{cookiecutter.project_slug}}/: README.md  pyproject.toml
