[project]
name = "{{cookiecutter.project_slug}}"
description = "{{cookiecutter.project_description}}"
version = "0.1.0"
authors = ["{{cookiecutter.project_author}}"]
dependencies = [
    "pandas",
    "matplotlib",
    "jupyterlab",
    "quarto",
    "polars",
]

[tool.uv]
requires-python = ">=3.9"

